--- a/src/styles/themes/_default-theme.scss
+++ b/src/styles/themes/_default-theme.scss
@@ -201,7 +201,7 @@
     --navbar-background: var(--primary-color-80);
     --navbar-text-color: var(--text-inverse-color);
     --navbar-text-hover-background: var(--navbar-background);
-    --navbar-text-hover-color: var(--navbar-text);
+    --navbar-text-hover-color: var(--navbar-text-color);
     /* ------ Navbar theme ------ */
 
     /* ------ Picker theme ------ */
